[package]
name = "pseqsid"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Calculates pairwise sequence identity, similarity and normalized similarity score of proteins in a multiple sequence alignment."
repository = "https://github.com/amaurypm/pseqsid"
keywords = ["identity", "similarity", "protein-sequences", "sequence-alignment", "similarity-score"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "3.1.0", features = ["derive"]}
rayon = "1.5.3"
